Finish header layout

--- a/content/projects/bootstrap.mdx
+++ b/content/projects/bootstrap.mdx
@@ -2,7 +2,7 @@
 tag: project
 title: Bootstrap
 description: Tradução da documentação em Português Brasil do mais popular framework HTML, CSS, e JavaScript para desenvolvimento responsivo e projetos mobile first na web. https://getbootstrap.com.br/
-imgUrl: ../../src/images/carprix.png
+imgUrl: ../../src/images/bootstrap.png
 github: https://github.com/bootstrapbrasil/bootstrap
 live: https://getbootstrap.com.br/
 ---
