--- a/content/projects/devpizza.mdx
+++ b/content/projects/devpizza.mdx
@@ -1,8 +1,8 @@
 ---
 tag: project
 title: DevPizza
-description: Site para a empresa DevPizza, totalmente responsivo e desenvolvido em Gatsby.
+description: Desenvolvimento de um site personalizado para a DevPizza. Neste projeto decidimos trabalhar com novas propostas tecnológicas para o desenvolvimento web. Utilizamos a biblioteca React com o framework Gatsby e GraphQL.
 imgUrl: ../../src/images/devpizza.png
-github: https://github.com/devPitsa/site
-live: https://github.com/devPitsa/site
+github: https://github.com/bootstrapbrasil/bootstrap
+live: https://carprix.com.br/
 ---
