--- a/content/projects/sattorusushi.mdx
+++ b/content/projects/sattorusushi.mdx
@@ -1,8 +1,9 @@
 ---
-tag: project
+tag: projects
 title: Sattoru Sushi
 description: Desenvolvimento de um site personalizado para o restaurante Sattoru Sushi. Integrado com o Instagram, sistema de avaliações do Google e Tripadvisor e sistema para reservas.
-imgUrl: ../../src/images/sattorusushi.png
-github: https://github.com/sattorusushi
+imgUrl: ../../src/images/projects/sattorusushi.png
+github: https://github.com/projects/sattorusushi.png
 live: https://sattorusushi.com.br/
+category: [1, 2, 3, 4]
 ---
