--- a/content/projects/bootstrap.mdx
+++ b/content/projects/bootstrap.mdx
@@ -1,8 +1,9 @@
 ---
-tag: project
+tag: projects
 title: Bootstrap
 description: Tradução da documentação em Português Brasil do mais popular framework HTML, CSS, e JavaScript para desenvolvimento responsivo e projetos mobile first na web. https://getbootstrap.com.br/
-imgUrl: ../../src/images/bootstrap.png
+imgUrl: ../../src/images/projects/bootstrap.png
 github: https://github.com/bootstrapbrasil/bootstrap
 live: https://getbootstrap.com.br/
+category: [1, 2, 3, 4]
 ---
