--- a/content/projects/carprix.mdx
+++ b/content/projects/carprix.mdx
@@ -1,8 +1,9 @@
 ---
-tag: project
+tag: projects
 title: Carprix
 description: Desenvolvimento de um site personalizado para o Carprix. Integração feita com a base de dados do cliente alinhado com a geolocalização do usuário.
-imgUrl: ../../src/images/carprix.png
+imgUrl: ../../src/images/projects/carprix.png
 github: https://github.com/bootstrapbrasil/bootstrap
 live: https://carprix.com.br/
+category: [1, 2, 3, 4]
 ---
