--- a/content/projects/devpizza.mdx
+++ b/content/projects/devpizza.mdx
@@ -1,8 +1,9 @@
 ---
-tag: project
+tag: projects
 title: DevPizza
 description: Desenvolvimento de um site personalizado para a DevPizza. Neste projeto decidimos trabalhar com novas propostas tecnológicas para o desenvolvimento web. Utilizamos a biblioteca React com o framework Gatsby e GraphQL.
-imgUrl: ../../src/images/devpizza.png
+imgUrl: ../../src/images/projects/devpizza.png
 github: https://github.com/bootstrapbrasil/bootstrap
 live: https://carprix.com.br/
+category: [1, 2, 3, 4]
 ---
