--- a/content/projects/inspiringQuotes.mdx
+++ b/content/projects/inspiringQuotes.mdx
@@ -1,8 +1,9 @@
 ---
-tag: project
+tag: projects
 title: Inspiring Quotes
 description: Inspiring Quotes...  for inspiring awesome peoples!
-imgUrl: ../../src/images/inspiringQuotes.png
+imgUrl: ../../src/images/projects/inspiringQuotes.png
 github: https://github.com/devPitsa/inspiringQuotes
 live: https://devpitsa.github.io/inspiringQuotes/
+category: [1, 2, 3, 4]
 ---
