Some changes in Techs and Experience

--- a/content/projects/bootstrap.mdx
+++ b/content/projects/bootstrap.mdx
@@ -5,5 +5,6 @@ description: Tradução da documentação em Português Brasil do mais popular f
 imgUrl: ../../src/images/projects/bootstrap.png
 github: https://github.com/bootstrapbrasil/bootstrap
 live: https://getbootstrap.com.br/
-category: [1, 2, 3, 4]
+categories: CSS, Open Source, Bootstrap, Translate
+order: 1
 ---
