--- a/content/projects/carprix.mdx
+++ b/content/projects/carprix.mdx
@@ -3,7 +3,8 @@ tag: projects
 title: Carprix
 description: Desenvolvimento de um site personalizado para o Carprix. Integração feita com a base de dados do cliente alinhado com a geolocalização do usuário.
 imgUrl: ../../src/images/projects/carprix.png
-github: https://github.com/bootstrapbrasil/bootstrap
+github: https://impulse.works
 live: https://carprix.com.br/
-category: [1, 2, 3, 4]
+categories: Wordpress, HTML, CSS, PHP
+order: 5
 ---
