--- a/content/projects/inspiringQuotes.mdx
+++ b/content/projects/inspiringQuotes.mdx
@@ -5,5 +5,6 @@ description: Inspiring Quotes...  for inspiring awesome peoples!
 imgUrl: ../../src/images/projects/inspiringQuotes.png
 github: https://github.com/devPitsa/inspiringQuotes
 live: https://devpitsa.github.io/inspiringQuotes/
-category: [1, 2, 3, 4]
+categories: ReactJs, Open Source
+order: 3
 ---
