--- a/content/projects/sattorusushi.mdx
+++ b/content/projects/sattorusushi.mdx
@@ -3,7 +3,8 @@ tag: projects
 title: Sattoru Sushi
 description: Desenvolvimento de um site personalizado para o restaurante Sattoru Sushi. Integrado com o Instagram, sistema de avaliações do Google e Tripadvisor e sistema para reservas.
 imgUrl: ../../src/images/projects/sattorusushi.png
-github: https://github.com/projects/sattorusushi.png
+github: https://github.com/ViniciusmDias/sattoru
 live: https://sattorusushi.com.br/
-category: [1, 2, 3, 4]
+categories: Wordpress, HTML, CSS, PHP
+order: 4
 ---
