--- a/content/technologies/gatsby.mdx
+++ b/content/technologies/gatsby.mdx
@@ -1,6 +1,7 @@
 ---
 tag: techs
 title: Gatsby
-description: I have experience of creating headless front-ends, and working with the JAMstack. This website is built with Gatsby a static site framework based on React.
-imgUrl: ../../src/images/techs/gatsby.png
+description: I have experience of creating fast websites and some landing pages. This website is built with Gatsby a static site framework based on React.
+imgUrl: ../../src/images/techs/gatsby-logo.png
+order: 1
 ---
