--- a/content/technologies/react.mdx
+++ b/content/technologies/react.mdx
@@ -1,6 +1,7 @@
 ---
 tag: techs
 title: React
-description: I have 4 years experience with React, building websites, applications, and component libraries. I have used both Redux and Apollo for client side state management. I also have professional experience with other packages that aid React development including React Router, Styled Components, Storybook, Enzyme and React Testing Library.
-imgUrl: ../../src/images/techs/react.png
+description: I have 2 years experience with React, building websites, applications, and component libraries. I also have professional experience with other packages that aid React development including React Router, Styled Components, Storybook, Enzyme and React Testing Library.
+imgUrl: ../../src/images/techs/reactt.png
+order: 5
 ---
