--- a/content/experiences/loeffa.mdx
+++ b/content/experiences/loeffa.mdx
@@ -1,8 +1,9 @@
 ---
 tag: experiences
 title: Loeffa
-description: A Loeffa é uma empresa que é contratada com a função de colocar a empresa que à contratou na "Área Digital" (desenvolvendo ambientes digitais), fazendo um site, um sistema e até mesmo um aplicativo, para essa empresa. Trabalhei construindo sites usando html, css e javascript. Usei bibliotecas como, Bootstrap, Materialize, jQuery entre outros. Utilizavamos GitLab para gerenciador de repositórios. Usei bastante o framework Django, pois utilizavamos ele como base para fazer o sistema da empresa que nos contratava.
+description: Loeffa is a company that is hired with the function of placing the company that hired it in the "Digital Area" (developing digital environments), making a website, a system and even an application, for that company. I worked building websites using html, css and javascript. I used libraries like, Bootstrap, Materialize, jQuery among others. We used GitLab for repository manager.
 imgUrl: ../../src/images/experiences/loeffa.png
 year: 2017 - 2018
-category: [1, 2, 3, 4]
+categories: Wordpress, PHP, HTML, CSS, Javascript
+order: 3
 ---
