--- a/content/projects/devpizza.mdx
+++ b/content/projects/devpizza.mdx
@@ -3,7 +3,8 @@ tag: projects
 title: DevPizza
 description: Desenvolvimento de um site personalizado para a DevPizza. Neste projeto decidimos trabalhar com novas propostas tecnológicas para o desenvolvimento web. Utilizamos a biblioteca React com o framework Gatsby e GraphQL.
 imgUrl: ../../src/images/projects/devpizza.png
-github: https://github.com/bootstrapbrasil/bootstrap
-live: https://carprix.com.br/
-category: [1, 2, 3, 4]
+github: https://github.com/devPitsa/site
+live: https://www.devpizza.com.br/
+categories: Gatsby, ReactJs, MDX, HTML, CSS, GraphQL
+order: 2
 ---
