--- a/content/technologies/css.mdx
+++ b/content/technologies/css.mdx
@@ -1,6 +1,7 @@
 ---
 tag: techs
 title: Css
-description: I have worked with HTML and CSS for over a decade, producing responsive markup and styles with an emphasis on accessibility and performance. I have an in-depth knowledge of the CSS spec and have worked with flexbox and grid. I can produce showpiece animations using only CSS animations. I have used both pre-processors Sass and Less.
-imgUrl: ../../src/images/techs/css.png
+description: I have worked with HTML and CSS for over 5 years, producing responsive markup and styles with an emphasis on accessibility and performance. I have an in-depth knowledge of the CSS spec and have worked with flexbox and grid. I can produce showpiece animations using only CSS animations. I have used both pre-processors Sass and Less.
+imgUrl: ../../src/images/techs/css3.png
+order: 3
 ---
