--- a/content/technologies/html.mdx
+++ b/content/technologies/html.mdx
@@ -1,6 +1,7 @@
 ---
 tag: techs
 title: Html
-description: I have worked with HTML and CSS for over a decade, producing responsive markup and styles with an emphasis on accessibility and performance. I have an in-depth knowledge of the CSS spec and have worked with flexbox and grid. I can produce showpiece animations using only CSS animations. I have used both pre-processors Sass and Less.
-imgUrl: ../../src/images/techs/html.png
+description: I have worked with HTML for over five years, producing semanthic and structured html with an emphasis on accessibility and performance.
+imgUrl: ../../src/images/techs/html5.png
+order: 2
 ---
