Rewriter Experience page

--- a/content/experiences/freelance.mdx
+++ b/content/experiences/freelance.mdx
@@ -1,9 +1,9 @@
 ---
 tag: experiences
 title: Freelancer
-description: I freelanced for Agencia Monking and Freelancer producing websites and designs for local businesses.
+description: I freelanced for Agencia Monking and WebSite Freelancer producing websites and designs for local businesses.
 imgUrl: ../../src/images/experiences/freelancer.png
-year: 2018 - 2020
+year: "2018"
 categories: React, Gatsby, HTML, CSS, Javascript
 order: 2
 ---
