--- a/content/experiences/impulse.mdx
+++ b/content/experiences/impulse.mdx
@@ -3,7 +3,7 @@ tag: experiences
 title: Impuls-e
 description: Development of fast websites and fast e-commerce with very high SEO for better ranking in google searches.
 imgUrl: ../../src/images/experiences/impulse.png
-year: Current Position
+year: Now
 categories: React, Gatsby, HTML, CSS, Javascript
 order: 1
 ---
