--- a/content/experiences/loeffa.mdx
+++ b/content/experiences/loeffa.mdx
@@ -1,9 +1,9 @@
 ---
 tag: experiences
 title: Loeffa
-description: Loeffa is a company that is hired with the function of placing the company that hired it in the "Digital Area" (developing digital environments), making a website, a system and even an application, for that company. I worked building websites using html, css and javascript. I used libraries like, Bootstrap, Materialize, jQuery among others. We used GitLab for repository manager.
+description: At Loeffa I learned how to create wordpress sites. I started my studies in html-css and went deep into some frameworks, such as the bootstrap, where I helped in its translation into the PT-BR language, while learning about it
 imgUrl: ../../src/images/experiences/loeffa.png
-year: 2017 - 2018
+year: "2017"
 categories: Wordpress, PHP, HTML, CSS, Javascript
 order: 3
 ---
