--- a/content/experiences/saude.mdx
+++ b/content/experiences/saude.mdx
@@ -3,7 +3,7 @@ tag: experiences
 title: Secretária da Saúde Sc
 description: At the Secretary of Health I worked as a technical support. There I did several maintenance and formatting on the computers. He was always in contact with the user to help him with technical problems and gave all kinds of support so that he could perform his work, both in person and through remote access.
 imgUrl: ../../src/images/experiences/saude.png
-year: 2015 - 2016
+year: "2015"
 categories: Remote Acess, Linux, Formating, Technical Suport
 order: 4
 ---
