--- a/content/experiences/loeffa.mdx
+++ b/content/experiences/loeffa.mdx
@@ -1,9 +1,9 @@
 ---
 tag: experiences
 title: Loeffa
-description: At Loeffa I learned how to create wordpress sites. I started my studies in html-css and went deep into some frameworks, such as the bootstrap, where I helped in its translation into the PT-BR language, while learning about it
-imgUrl: ../../src/images/experiences/loeffa.png
-year: "2017"
-categories: Wordpress, PHP, HTML, CSS, Javascript
+description: Web development agency, where I worked in a fast-paced environment, with continuous deliveries and Scrum methodology. There I started my journey in development on the principles of the Web (HTML, CSS and JavaScript) and we used to use the LAMP stack (Wordpress) to develop our websites.
+url: https://loeffa.com/
+year: "2018"
+categories: Wordpress, PHP, HTML, CSS, Javascript, Scrum
 order: 3
 ---
