--- a/content/experiences/saude.mdx
+++ b/content/experiences/saude.mdx
@@ -1,8 +1,8 @@
 ---
 tag: experiences
-title: Health Department - Sc
+title: SC State Department of Health
 description: I worked in the health department of Santa Catarina as a technical support. There I performed the maintenance and formatting of computers. I was always in contact with the user to help him solve all technical problems and give him all kinds of support so that he could perform his work, both personally and through remote access.
-imgUrl: ../../src/images/experiences/saude.png
+url: https://www.getin.saude.sc.gov.br/
 year: "2015"
 categories: Remote Acess, Linux, Formating, Technical Suport
 order: 4
