--- a/content/experiences/impulse.mdx
+++ b/content/experiences/impulse.mdx
@@ -3,7 +3,7 @@ tag: experiences
 title: Impuls-e
 description: Built and maintained web applications, like websites, e-commerce’s, portfolios and landing-pages. The tools that were used are Gatsby.js, Netlify, GitHub, Contentful. Learning how to work as a tech small team with tight deadlines, daily meetings and Git workflow. Using Gatsby.js my primary focus was improving the sites speed and SEO to improve the rank of sites on PageSpeed Insights. As a result, our sites always scored 80+ on mobiles and 95+ on desktops.
 url: https://impuls-e.works/
-year: Now
+year: "2020"
 categories: React, Gatsby, HTML, CSS, Javascript, JAMSTACK, Typescript
-order: 1
+order: 2
 ---
